--- a/Task Manager/Content/Site.css
+++ b/Task Manager/Content/Site.css
@@ -52,6 +52,7 @@ select#ProjectManagerDropdown {
     -webkit-border-radius: 4;
     -moz-border-radius: 4;
     border-radius: 4px;
+    margin-left: 65px;
     text-shadow: 0px 0px 0px #00000a;
     font-family: Georgia;
     color: #241f24;
@@ -85,18 +86,21 @@ input[type="search"] {
 input[type="file"] {
     display: none;
 }
+
 .custom-file-upload {
     border: 1px solid #ccc;
     display: inline-block;
     padding: 6px 12px;
     cursor: pointer;
 }
+
     .custom-file-upload:hover {
-    background-color:dimgrey;
-    
-    
+        background-color: dimgrey;
     }
 
+#back {
+    margin-left: 50%;
+}
 
 
 
