--- a/Task Manager/Views/Task/ViewTask.cshtml
+++ b/Task Manager/Views/Task/ViewTask.cshtml
@@ -43,7 +43,8 @@
                                 <th>Created By</th>
                                 <th>Start Date</th>
                                 <th>End Date</th>
-                                <th>Alerts</th>
+                                <th>SMS</th>
+                                <th>Email</th>
                                 <th>Status</th>
                                 <th>Actions</th>
                             </tr>
@@ -136,38 +137,18 @@
             contentType: "application/json;charset=utf-8",
             dataType: "json",
             success: function (data) {
-                console.log(data);
-                var fxg = "";
                 for (var i = 0; i < data.length; i++) {
-                    for (k = 0; k < data[i].users.length; k++) {
-                        fxg = data[i].users[k] + "," + fxg;
-                    }
-                    if ((data[i].task.sms == false) && (data[i].task.email == true)) {
-                        var mxg = "Email";
-                    }
-                    else if ((data[i].task.sms == true) && (data[i].task.email == false)) {
-                        var mxg = "SMS";
-                    }
-                    else if ((data[i].task.sms == true) && (data[i].task.email == true)) {
-                        var mxg = "Email And SMS";
-                    }
-                    else {
-                        var mxg = "No Status Found";
-                    }
-                    $("#dynamic-Grid").append("<tr id="+i+"><td>" + data[i].task.task_name + "</td><td>" + data[i].task.description + "</td><td>" + fxg.toString() + "</td><td>" + data[i].task.Created_By.user_Name + "</td><td>" + data[i].task.start_date.substring(0, 10) + "</td><td>" + data[i].task.end_date.substring(0, 10) + "</td><td>" + mxg.toString() + "</td><td> <select  onchange='status(this.value," + data[i].task.id + ")' id=" + data[i].task.id + "><option value='1'>InProgress</option><option value='2'>Pending</option><option value='3'>Complete</option><option value='4'>Closed</option></select></td><td> <button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"UpdateTask(" + data[i].task.id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"DeleteTask(" + data[i].task.id + ","+i+")\"></button> <button  class='btn btn-info fa fa-comments-o' onclick=\"comments(" + data[i].task.id + ")\"></button></td></tr>");
-                    //data-toggle='modal' data-target='#myModal'
-
+                    $("#dynamic-Grid").append("<tr id=" + i + "><td>" + data[i].task.task_name + "</td><td>" + data[i].task.description + "</td><td>" + data[i].users + "</td><td>" + data[i].task.Created_By.user_Name + "</td><td>" + data[i].task.start_date.substring(0, 10) + "</td><td>" + data[i].task.end_date.substring(0, 10) + "</td><td>" + data[i].task.sms + "</td><td>" + data[i].task.email + "</td><td> <select  onchange='status(this.value," + data[i].task.id + ")' id=" + data[i].task.id + "><option value='1'>InProgress</option><option value='2'>Pending</option><option value='3'>Complete</option><option value='4'>Closed</option></select></td><td> <button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"UpdateTask(" + data[i].task.id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"DeleteTask(" + data[i].task.id + "," + i + ")\"></button> <button  class='btn btn-info fa fa-comments-o' onclick=\"comments(" + data[i].task.id + ")\"></button></td></tr>");
                     $("select#" + data[i].task.id + " option").filter(function () {
                         return $(this).val() == data[i].task.status;
-                    }).prop('selected', true);
-                    fxg = "";
+                    }).prop('selected', true);                  
                 }
             },
             error: function () { alert('Grid Not Load'); }
         });
     });
     function DeleteTask(id,rId) {
-        if (confirm('Are You Sure ! You Want to Delete This Task')) {
+        if (confirm('Are You Sure! You Want to Delete This Task')) {
             $.ajax({
                 url: '/api/TaskApi/' + id,
                 type: 'Delete',
