--- a/Task Manager/Views/Shared/_Home.cshtml
+++ b/Task Manager/Views/Shared/_Home.cshtml
@@ -194,7 +194,7 @@
                 processing: true,
                 deferloading: 57,
                 retrieve: true,
-                paging: false
+             //   paging: false
             });
         });
     </script>
