--- a/Task Manager/Views/CheckStatus/Index.cshtml
+++ b/Task Manager/Views/CheckStatus/Index.cshtml
@@ -2,6 +2,24 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/Nonuser.cshtml";
 }
+<div class="col-lg-12">
+    <div class="col-lg-6">
+        <div class="col-lg-3">
+            <h4>Customer Code :</h4>
+        </div>
+        <div class="col-lg-3">
+            <h4><label id="customercode"></label></h4>
+        </div>
+    </div>
+    <div class="col-lg-6">
+        <div class="col-lg-3">
+            <h4>Customer Name :</h4>
+        </div>
+        <div class="col-lg-3">
+            <h4><label id="customername"></label></h4>
+        </div>
+    </div>
+</div>
 
 <div class="col-lg-12">
     <div class="panel panel-default">
@@ -14,11 +32,13 @@
             <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                 <thead>
                     <tr>
-                        <th>Ticket Number</th>
-                        <th>Ticket Name</th>
-                        <th>Ticket Description</th>
-                        <th>Ticket Date</th>
-                        <th>Ticket Status</th>
+                        <th style="width:95px;">Number</th>
+                        <th>Name</th>
+                        <th>Project</th>
+                        <th>Branch Code / Location</th>
+                        <th>Description</th>
+                        <th>Date</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
                 <tbody id="dynamic-Grid"></tbody>
@@ -31,7 +51,7 @@
 </div>
 <!-- /.col-lg-12 -->
 <!-- /.row -->
-<input action="action" onclick="history.go(-1);" type="button" value="Back"  class="btn btn-primary" id="back"/>
+<input action="action" onclick="history.go(-1);" type="button" value="Back" class="btn btn-primary" id="back" />
 
 <script type="text/javascript">
     $(document).ready(function () {
@@ -42,11 +62,29 @@
             contentType: "application/json;charset=utf-8",
             dataType: "json",
             success: function (data) {
+                console.log(data);
+                filltable(data);
                 for (var i = 0; i < data.length; i++) {
-                    $("#dynamic-Grid").append("<tr><td>" + data[i].id + "</td><td>" + data[i].name + "</td><td>" + data[i].description + "</td><td>" + data[i].date.substring(0, 10) + "</td><td>" + data[i].status);
+                    document.getElementById('customercode').innerHTML = data[i].code;
+                    document.getElementById('customername').innerHTML = data[i].customer_name;
                 }
             },
             error: function () { alert('Data Not Found'); }
         });
     });
+    function filltable(datas) {
+        $("#dataTables-example").DataTable({
+            "aaData": datas,
+            "aoColumns": [
+                { "mDataProp": "id" },
+                { "mDataProp": "name" },
+                { "mDataProp": "project_name" },
+                { "mDataProp": "branch_code" },
+                { "mDataProp": "description" },
+                { "mDataProp": "date" },
+                { "mDataProp": "status" }
+            ]
+        });
+
+    }
 </script>
