--- a/Task Manager/Views/Inventory/ViewInventory.cshtml
+++ b/Task Manager/Views/Inventory/ViewInventory.cshtml
@@ -40,8 +40,9 @@
                                 <th>Type</th>
                                 <th>Catogery</th>
                                 <th>Brand</th>
-                                <th>Model</th>
-                                <th>Invert Date</th>
+                                <th>Model</th>                          
+                                <th>Barcode</th>
+                                <th>Inward Date</th>
                                 <th>Desc</th>
                                 <th>Quantity</th>
                                 <th>Vendor Name</th>
@@ -71,19 +72,53 @@
             dataType: "json",
             success: function (data) {
                 console.log(data);
-                var type;
-                for (var i = 0; i < data.length; i++) {
-                    if (data[i].type == true) {
-                        type = "Local"
-                    }
-                    else {
-                        type = "Imported";
+                filltable(data)
+                //var type;
+                //for (var i = 0; i < data.length; i++) {
+                //    if (data[i].type == true) {
+                //        type = "Local"
+                //    }
+                //    else {
+                //        type = "Imported";
 
-                    }
-                    $("#dynamic-Grid").append("<tr id=" + i + "><td>" + data[i].name + "</td><td>" + type + "</td><td>" + data[i].catogrey + "</td><td>" + data[i].brand + "</td><td>" + data[i].model + "</td><td>" + data[i].barcode + "</td><td>" + data[i].description + "</td><td>" + data[i].quantity + "</td><td>" + data[i].vendorName + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].id + "," + i + ")\"></button></td></tr>");
-                }
+                //    }
+                //    $("#dynamic-Grid").append("<tr id=" + i + "><td>" + data[i].name + "</td><td>" + type + "</td><td>" + data[i].catogrey + "</td><td>" + data[i].brand + "</td><td>" + data[i].model + "</td><td>" + data[i].barcode + "</td><td>" + data[i].description + "</td><td>" + data[i].quantity + "</td><td>" + data[i].vendorName + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"deleteUser(" + data[i].id + "," + i + ")\"></button></td></tr>");
+                //}
             },
             error: function () { alert('Grid Not Load'); }
         });
     });
+    function filltable(datas) {
+        $("#dataTables-example").DataTable({
+            "aaData": datas,
+            "aoColumns": [
+                { "mDataProp": "name" },
+                { "mDataProp": "type" },
+                { "mDataProp": "catogrey" },
+                { "mDataProp": "brand" },
+                { "mDataProp": "model" },
+                { "mDataProp": "barcode" },
+                { "mDataProp": "inward" },
+                { "mDataProp": "description" },
+                { "mDataProp": "quantity" },
+                { "mDataProp": "vendorName" },
+                { "mDataProp": "action" }
+            ]
+        });
+    }
+    function Detailproduct(id) {
+        $.ajax({
+            async: false,
+            url: '/api/InventoryApi/' + id,
+            type: 'POST',
+            success: function (data) {
+                console.log(data);
+                window.location.href = '/Inventory/ViewInventoryDetail';
+                location.reload();
+            },
+            error: function () {
+                alert('User not Updated');
+            }
+        });
+    }
 </script>
