--- a/Task Manager/Views/Ticket/ViewTicket.cshtml
+++ b/Task Manager/Views/Ticket/ViewTicket.cshtml
@@ -36,13 +36,15 @@
                     <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
                             <tr>
-                                <th>Ticket Name</th>
+                                <th>Task Name</th>
                                 <th>Description</th>
                                 <th>Assigned To</th>
+                                <th>Created By</th>
+                                <th>Start Date</th>
+                                <th>End Date</th>
                                 <th>SMS</th>
                                 <th>Email</th>
-                                <th>Created By</th>
-                                <th>Status</th>                              
+                                <th>Status</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
@@ -56,56 +58,6 @@
         </div>
         <!-- /.col-lg-12 -->
         <!-- /.row -->
-    </div>
-</div>
-<div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title center">Sender Detail</h4>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="panel-body">
-                        <div>
-                            <div class="col-lg-12 spacing">
-                                <div class="col-lg-6 ">
-                                    <label>User Name</label>
-                                </div>
-                                <div class="col-lg-6 ">
-                                    <label id="username"></label>
-                                </div>
-                            </div>
-                            <div class="col-lg-12 spacing">
-                                <div class="col-lg-6">
-                                    <label>Email Address</label>
-                                </div>
-                                <div class="col-lg-6">
-                                    <label id="uemail"></label>
-                                </div>
-                            </div>
-                            <div class="col-lg-12 spacing">
-                                <div class="col-lg-6">
-                                    <label>Mobile Number</label>
-                                </div>
-                                <div class="col-lg-6">
-                                    <label id="mobilenum"></label>
-                                </div>
-                            </div>
-                        </div>
-                       
-                    </div>
-                    <!-- /.panel-body -->
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-
-
-        </div>
-
     </div>
 </div>
 
@@ -131,24 +83,13 @@
             type: 'GET',
             contentType: "application/json;charset=utf-8",
             dataType: "json",
-            success: function (data) {
-                console.log(data);
-                var fxg = "";
-                for (var i = 0; i < data.length; i++) {                  
-
-                    $("#dynamic-Grid").append("<tr id=" + i + "><td>" + data[i].task.task_name + "</td><td>" + data[i].task.description + "</td><td>" + data[i].users + "</td><td>" + data[i].task.sms + "</td><td>" + data[i].task.email + "</td><td>" + data[i].task.Created_By.user_Name + "</td><td> <select  onchange='status(this.value," + data[i].task.id + ")' id=" + data[i].task.id + "><option value='1'>InProgress</option><option value='2'>Pending</option><option value='3'>Complete</option><option value='4'>Closed</option></select></td><td> <button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"UpdateTask(" + data[i].task.id + ")\"></button> <button  class='btn btn-danger fa fa-times' onclick=\"DeleteTask(" + data[i].task.id + "," + i + ")\"></button> <button  class='btn btn-info fa fa-comments-o' onclick=\"comments(" + data[i].task.id + ")\"></button></td></tr>");
-                    //data-toggle='modal' data-target='#myModal'
-
-                    $("select#" + data[i].task.id + " option").filter(function () {
-                        return $(this).val() == data[i].task.status;
-                    }).prop('selected', true);
-                    fxg = "";
-                }
+            success: function (data) {            
+                filltable(data);
             },
             error: function () { alert('Grid Not Load'); }
         });
     });
-    function DeleteTask(id,rId) {
+    function DeleteTask(id, rId) {
         if (confirm('Are You Sure ! You Want to Delete This Ticket')) {
             $.ajax({
                 url: '/api/TicketApi/' + id,
@@ -158,6 +99,7 @@
                     alert(data);
 
                     $('table#dataTables-example tr#' + rId).remove();
+                    location.reload();
                 },
                 error: function (data) { alert(data); }
             });
@@ -176,31 +118,6 @@
             }
         });
     }
-    function Detail(val) {
-        $.ajax({
-            url: '/api/TaskApi/' + val,
-            type: 'POST',
-            contentType: "application/json;charset=utf-8",
-            success: function (data) {
-                console.log(data);
-
-                var uname = document.getElementById('username')
-                uname.innerHTML = "";
-                uname.innerHTML = uname.innerHTML + data.name;
-
-                var useremail = document.getElementById('uemail')
-                useremail.innerHTML = "";
-                useremail.innerHTML = useremail.innerHTML + data.email;
-
-                var pnum = document.getElementById('mobilenum')
-                pnum.innerHTML = "";
-                pnum.innerHTML = pnum.innerHTML + data.number;
-            },
-            error: function (data) {
-                console.log(data);
-            }
-        });
-    }    
     function comments(id) {
         console.log(id);
         $.ajax({
@@ -213,5 +130,27 @@
             },
             error: function () { console.log("Code Not Ok!"); }
         });
+    }
+
+    function filltable(datas) {
+        $("#dataTables-example").DataTable({
+            "aaData": datas,
+            "aoColumns": [
+                { "mDataProp": "task_name" },
+                { "mDataProp": "description" },
+                { "mDataProp": "users" },
+                { "mDataProp": "createdBy" },
+                { "mDataProp": ".startDate" },
+                { "mDataProp": "endDate" },
+                { "mDataProp": "sms" },
+                { "mDataProp": "email" },
+                { "mDataProp": "status" },
+                { "mDataProp": "button" }
+
+
+
+            ]
+        });
+
     }
 </script>
