--- a/Task Manager/Views/User/ViewUser.cshtml
+++ b/Task Manager/Views/User/ViewUser.cshtml
@@ -52,14 +52,31 @@
             contentType: "application/json;charset=utf-8",
             dataType: "json",
             success: function (data) {
-             
-                for (var i = 0; i < data.length; i++) {
-                    $("#dynamic-Grid").append("<tr><td>" + data[i].user_Name + "</td><td>" + data[i].Roles_id.role_name + "</td><td>" + data[i].Address + "</td><td>" + data[i].Email + "</td><td>" + data[i].MobileNo + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger  fa fa-times' onclick=\"deleteUser(" + data[i].id + ")\"></button></td></tr>");
-                }
+                console.log(data);
+                filltable(data);
+                //for (var i = 0; i < data.length; i++) {
+                //    $("#dynamic-Grid").append("<tr><td>" + data[i].user_Name + "</td><td>" + data[i].Roles_id.role_name + "</td><td>" + data[i].Address + "</td><td>" + data[i].Email + "</td><td>" + data[i].MobileNo + "</td><td><button value='Update' class='btn btn-primary fa fa-cog' id='upd' onclick=\"preUpdate(" + data[i].id + ")\"></button> <button  class='btn btn-danger  fa fa-times' onclick=\"deleteUser(" + data[i].id + ")\"></button></td></tr>");
+                //}
             },
             error: function () { alert('Grid Not Load'); }
         });
     });
+
+    function filltable(datas) {
+        $("#dataTables-example").DataTable({
+            "aaData": datas,
+            "aoColumns": [
+                { "mDataProp": "name" },
+                { "mDataProp": "userType" },
+                { "mDataProp": "address" },
+                { "mDataProp": "email" },
+                { "mDataProp": "phonenumber" },
+                { "mDataProp": "action" }
+            ]
+        });
+
+    }
+
 
     function preUpdate(id) {
 
